Add vulnerable code for CryptoHelper-8.java (CWE-319)